--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"ios": "react-native run-ios --simulator=\"iPhone X\"",
 		"start": "react-native start",
 		"test": "jest",
-		"lint": "eslint ."
+		"lint": "eslint --ext .js,.jsx,.ts,.tsx ./app/"
 	},
 	"dependencies": {
 		"react": "16.13.1",
@@ -17,12 +17,20 @@
 		"@babel/core": "^7.8.4",
 		"@babel/runtime": "^7.8.4",
 		"@react-native-community/eslint-config": "^1.1.0",
+		"babel-eslint": "^10.1.0",
 		"babel-jest": "^25.1.0",
 		"babel-plugin-module-resolver": "^4.0.0",
+		"eslint": "^7.9.0",
+		"eslint-config-airbnb": "^18.2.0",
+		"eslint-config-prettier": "^6.11.0",
 		"eslint-import-resolver-babel-module": "^5.1.2",
 		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.6",
 		"jest": "^25.1.0",
 		"metro-react-native-babel-preset": "^0.59.0",
+		"prettier": "^2.1.2",
 		"react-test-renderer": "16.13.1"
 	},
 	"jest": {
