--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
 		"ios": "react-native run-ios --simulator=\"iPhone X\"",
 		"start": "react-native start",
 		"test": "jest",
-		"lint": "eslint --ext .js,.jsx,.ts,.tsx ./app/"
+		"lint": "eslint --ext .js,.jsx,.ts,.tsx ./app/",
+		"husky": {
+			"hooks": {
+				"pre-commit": "pretty-quick --staged && npm run lint"
+			}
+		}
 	},
 	"dependencies": {
 		"react": "16.13.1",
@@ -28,9 +33,11 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-react": "^7.20.6",
+		"husky": "^4.3.0",
 		"jest": "^25.1.0",
 		"metro-react-native-babel-preset": "^0.59.0",
 		"prettier": "^2.1.2",
+		"pretty-quick": "^3.0.2",
 		"react-test-renderer": "16.13.1"
 	},
 	"jest": {
