--- a/package.json
+++ b/package.json
@@ -15,8 +15,26 @@
 		}
 	},
 	"dependencies": {
+		"@react-native-community/async-storage": "^1.12.0",
+		"@react-native-community/masked-view": "^0.1.10",
+		"@react-navigation/bottom-tabs": "^5.8.0",
+		"@react-navigation/native": "^5.7.3",
+		"@react-navigation/stack": "^5.9.0",
+		"i18n-js": "^3.7.1",
+		"moment": "^2.28.0",
+		"prop-types": "^15.7.2",
 		"react": "16.13.1",
-		"react-native": "0.63.2"
+		"react-native": "0.63.2",
+		"react-native-bootsplash": "^2.2.5",
+		"react-native-gesture-handler": "^1.8.0",
+		"react-native-localize": "^1.4.1",
+		"react-native-reanimated": "^1.13.0",
+		"react-native-safe-area-context": "^3.1.8",
+		"react-native-screens": "^2.11.0",
+		"react-redux": "^7.2.1",
+		"redux": "^4.0.5",
+		"redux-persist": "^6.0.0",
+		"redux-saga": "^1.1.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.4",
