--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"android": "react-native run-android",
-		"ios": "react-native run-ios --simulator=\"iPhone X\"",
+		"ios": "react-native run-ios --simulator=\"iPhone 11 Pro\"",
 		"start": "react-native start",
 		"test": "jest",
 		"lint": "eslint --ext .js,.jsx,.ts,.tsx ./app/",
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"@react-native-community/async-storage": "^1.12.0",
+		"@react-native-community/google-signin": "^4.0.3",
 		"@react-native-community/masked-view": "^0.1.10",
 		"@react-navigation/bottom-tabs": "^5.8.0",
 		"@react-navigation/native": "^5.7.3",
