--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"react-native-reanimated": "^1.13.0",
 		"react-native-safe-area-context": "^3.1.8",
 		"react-native-screens": "^2.11.0",
+		"react-native-shadow": "^1.2.2",
+		"react-native-svg": "^12.1.0",
 		"react-redux": "^7.2.1",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
